crates/ty_python_semantic/resources/mdtest/snapshots/union_call.md_-_Calling_a_union_of_f…_-_A_smaller_scale_exam…_(c24ecd8582e5eb2f).snap.new
---
source: crates/ty_test/src/lib.rs
assertion_line: 397
expression: snapshot
---
---
mdtest name: union_call.md - Calling a union of function types - A smaller scale example
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/union_call.md
---

# Python source files

## mdtest_snippet.py

```
 1 | def f1() -> int:
 2 |     return 0
 3 | 
 4 | def f2(name: str) -> int:
 5 |     return 0
 6 | 
 7 | def _(flag: bool):
 8 |     if flag:
 9 |         f = f1
10 |     else:
11 |         f = f2
12 |     # error: [too-many-positional-arguments]
13 |     # error: [invalid-argument-type]
14 |     x = f(3)
```

# Diagnostics

```
error[call-non-callable]: Object of type `object` is not callable
  --> src/mdtest_snippet.py:14:9
   |
12 |     # error: [too-many-positional-arguments]
13 |     # error: [invalid-argument-type]
14 |     x = f(3)
   |         ^^^^
   |
info: rule `call-non-callable` is enabled by default

```
